2013-02-28  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (fludownloader_init),
	(fludownloader_shutdown):
	  - Add init lock, to allow multithreaded initialization.

2013-02-27  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_remove_task), (_abort_task),
	(_schedule_tasks), (_thread_function), (fludownloader_new_task),
	(fludownloader_abort_task), (fludownloader_abort_all_tasks):
	  - Do not immediately pass all tasks to libCurl. Keep a list and pass them
	    one by one once the current transfer reaches 75% of the file (if known).
	    This allows having only one running task and at most one pipelined when
	    the current one is about to finish, which allows HTTP pipelining AND
	    reduces the risk of having to abort a transfer (which implies a new TCP
	    connection).

2013-02-26  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (data_cb), (main):
	  - Update example.

2013-02-26  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c:
	  - Add comments and rearrange structure members.

2013-02-26  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_header_function),
	(fludownloader_new_task):
	  - Parse HTTP headers to find out file sizes (still unused).

2013-02-25  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (done_cb):
	* lib/fludownloader.c: (_write_function), (_process_curl_messages):
	* lib/fludownloader.h:
	  - Report downloaded size upon task completion. This seems the only way to
	    detect errors when dealing with the FILE protocol.
	  - Update example.

2013-02-20  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (data_cb), (main):
	* lib/fludownloader.c: (_write_function):
	* lib/fludownloader.h:
	  - Allow tasks to be aborted from the callback. Update example.

2013-02-20  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_write_function), (_is_task_running),
	(_remove_task), (_abort_task), (_process_curl_messages),