@@ -1,0 +1,13 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: fludownloader
+Version: @VERSION@
+Description: Fluendo Downloader Library
+Requires.private: @REQUIREMENTS_PC@
+Libs.private: @REQUIREMENTS_LIBS@
+Libs: -L${libdir} -lfludownloader
+Cflags: -I${includedir} @REQUIREMENTS_CFLAGS@
+
